--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "touch-cli": "^0.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
+    "typescript": "^5.0.4"
   }
 }
